<resources>
    <string name="signUpHint">Ainda não tem conta? Cadastre-se aqui</string>
    <string name="txtBtnLogin">LOGIN</string>
    <string name="edtTxtEmailHint">E-mail</string>
    <string name="edtTxtPasswordHint">Senha</string>
    <string name="app_name">AppFit</string>
    <string name="logoContentDesc">AppFit</string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnGoogle">Google</string>
    <string name="txtPasswordForgot">Esqueceu sua senha?</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gabriel Santos</string>
    <string name="nav_header_subtitle">Aluno</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Página Inicial</string>
    <string name="menu_stats">Estatisticas de ganho</string>
    <string name="menu_evaluation">Solicitar avaliação</string>
    <string name="menu_training">Lista de treinos</string>
    <string name="menu_profile">Atualizar perfil</string>
    <string name="menu_notifications">Notificações</string>
    <string name="menu_logout">Sair</string>
    <string name="confirmPassword">Confirme sua senha</string>
    <string name="btnSignUp">Cadastrar</string>
    <string name="doLogin">Já tem uma conta? Faça login aqui</string>
</resources>
