<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_evaluation"
            android:title="@string/menu_evaluation" />
        <item
            android:id="@+id/nav_training"
            android:title="@string/menu_training" />

        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notifications" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
